recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:11: error: expected start of definition
	override def run() {
                 ^Spiral:15: error: Unmatched closing brace '}' ignored here
}
^