recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if (teps !=0)
  	avance(length)
  	gache(angle)
  	spiral(steps - 1, angle, length + increment, increment)
	}
  
}